--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,6 @@
 </head>
 
 <body>
-  <canvas id="canvas" width="800" height="450"></canvas>
+  <canvas id="canvas" width="800" height="450" oncontextmenu="return false;"></canvas>
 </body>
 </html>
